kube/3-deploy/1-core/db/pg/app/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app cnpg
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # allow webhook
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "9443"
  egress:
    # same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # allow access to all CNPG cluster pods
    - toEndpoints:
        - matchExpressions:
            - key: cnpg.io/cluster
              operator: Exists
    # allow access to apiserver
    - toEntities:
        - kube-apiserver
